assets/active/kubevirt-metrics-exporter/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubevirt-metrics-exporter
  namespace: kubevirt-metrics-exporter
  labels:
    app: kubevirt-metrics-exporter
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: kubevirt-metrics-exporter-tls
spec:
  clusterIP: None
  selector:
    app: kubevirt-metrics-exporter
  ports:
    - name: https
      port: 8443
      targetPort: metrics
      protocol: TCP
